--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
+  "author": "JonMichael JoMi Leszczynski",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -11,9 +12,6 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	},
-  {
-    "author": "JonMichael JoMi Leszczynski"
-  }
 }
 
 
