--- a/package.json
+++ b/package.json
@@ -1,17 +1,51 @@
 {
-	"name": "fcc-learn-npm-package-json",
-  "author": "JonMichael JoMi Leszczynski",
-	"dependencies": {
-		"express": "^4.14.0"
+	"name": "package-json",
+	"version": "8.1.0",
+	"description": "Get metadata of a package from the npm registry",
+	"license": "MIT",
+	"repository": "sindresorhus/package-json",
+	"funding": "https://github.com/sponsors/sindresorhus",
+	"author": {
+		"name": "JoMi",
+		"email": "jmleszczynski@gmail.com",
+		"url": "https://jmleszczynski.github.io/Packages_With_NPM_Challenge/"
 	},
-	"main": "server.js",
+	"type": "module",
+	"exports": "./index.js",
+	"types": "./index.d.ts",
+	"engines": {
+		"node": ">=14.16"
+	},
 	"scripts": {
-		"start": "node server.js"
+		"test": "xo && ava && tsd"
 	},
-	"repository": {
-		"type": "git",
-		"url": "https://idontknow/todo.git"
+	"files": [
+		"index.js",
+		"index.d.ts"
+	],
+	"keywords": [
+		"npm",
+		"registry",
+		"package",
+		"pkg",
+		"package.json",
+		"json",
+		"module",
+		"scope",
+		"scoped"
+	],
+	"dependencies": {
+		"got": "^12.1.0",
+		"registry-auth-token": "^5.0.1",
+		"registry-url": "^6.0.0",
+		"semver": "^7.3.7"
 	},
+	"devDependencies": {
+		"@types/node": "^17.0.40",
+		"ava": "^4.3.0",
+		"mock-private-registry": "^1.1.2",
+		"tsd": "^0.20.0",
+		"xo": "^0.49.0"
+	}
 }
-
 
